# Cpp-Musings

./: README.md
Basics/: CMakeLists.txt  main.cpp  resource_manager.hpp
Building-Embedded-Sysems-On-Linux/mini-projects/test-anynmeasentence/: CMakeLists.txt  anynmeasentence1.cpp  anynmeasentence1.h  anynmeasentence2.cpp  anynmeasentence2.h  main.cpp
Building-Embedded-Sysems-On-Linux/notes/: type-erasure.md
C++-Software-Design-Principles-And-Patterns/CommandPattern/: Add.h  CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorCommand.h  Subtract.h  main.cpp
COBS-Redux/: README.md
COBS-Redux/Cpp/: .gitignore  CMakeLists.txt
COBS-Redux/Cpp/COBS/: CMakeLists.txt  COBS.h
COBS-Redux/Cpp/COBS/COBS/: .gitignore  CMakeLists.txt  COBS.cpp  main.cpp  test_vectors.h  utils.h
COBS-Redux/Python/: .gitignore  main.py  pyproject.toml  test_vectors.py  utils.py
Design-Patterns/Observer/Weather-Monitoring-System/: CMakeLists.txt  README.MD  main.cpp  observer.h  weather_sensor.cpp  weather_sensor.h
Design-Patterns/Observer/Weather-Monitoring-System/tests/: test_test.cpp
Design-Patterns/Strategy/01-Text-Processing/: CMakeLists.txt  README.MD  main.cpp  strategy.cpp  strategy.h
Design-Patterns/Strategy/01-Text-Processing/tests/: test_test.cpp
Learn-C++-By-Example/: triangle.cpp  triangle.h  types.h
Learn-C++-By-Example/NumberGuess/: CMakeLists.txt  guess_prime.cpp  guess_prime.h  guess_random.cpp  guess_random.h  input_utils.cpp  input_utils.h  main.cpp  prime_number.cpp  prime_number.h  random_number.cpp  random_number.h
Learn-C++-By-Example/PascalsTriangle/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h  types.h
